# ChronoData

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  class_generation.ipynb  classes_generation.ipynb  examples.ipynb  gedcom7_generation.ipynb  gedcom7_specification.ipynb  mkdocs.yml  pyproject.toml  specs_generation.ipynb  store.ipynb  tests_generation.ipynb  tox.ini  utilities.ipynb
.github/workflows/: manual.yml
.virtual_documents/load/: load_iso_639.ipynb
calendars/: __init__.py  american_indian_calendars.py  assyrian_calendars.py  babylonian_calendars.py  calendars.py  french_revolution_calendars.py  gregorian_calendars.py  hebraic_calendars.py  julian_calendars.py  methods.py
chronodata/: Chronodata.code-workspace  __init__.py  build.py  calendars.py  chinese_calendars.py  chrono.py  chronology.py  compare.py  constants.py  core.py  dates.py  egyptian_calendars.py  enums.py  french_revolution_calendars.py  g7.py  ged.py  gedcom.py  gregorian_calendars.py  hebraic_calendars.py  indian_calendars.py  islamic_calendars.py  json.py  julian_calendars.py  langs.py  messages.py  methods.py  readwrite.py  records.py  store.py  tuples.py  visualize.py
chronodata/separate/: compare.py  constants.py  readwrite.py
chronodata/utils/: const.py  constants.py
genedata/: __init__.py  build.py  classes7.py  classes70.py  constants.py  examples.ipynb  examples.py  examples70.py  gedcom.py  gedcom7.py  gedcom_v7.py  generate.py  load.py  messages.py  methods.py  prep.py  specifications7.py  specifications70.py  specs7.py  store.py  structure.py  util.py  utilities.ipynb
load/: load_iso_639.ipynb
test/: chronology_constants_test.py  chronology_dataframe_test.py  chronology_general_test.py  chronology_gregorian_test.py  chronology_secular_test.py  chronology_sysout_test.py  chronology_test.py
tests/: address_test.py  age_test.py  association_test.py  build_test.py  chrono_test.py  chronology_constants_test.py  chronology_general_test.py  chronology_gregorian_test.py  chronology_secular_test.py  chronology_sysout_test.py  constants_test.py  contact_test.py  counter_test.py  date_test.py  dates_test.py  datetimestatus_test.py  datevalue_test.py  defs_test.py  dna_test.py  enums_test.py  family_individual_test.py  family_test.py  flood_comparison_test.py  genesis5_test.py  header_test.py  individual_test.py  langs_test.py  matplotlib_test.py  methods_test.py  multimedia_test.py  pandas_test.py  personal_name_structure_test.py  personal_name_test.py  personalname_test.py  read_write_test.py  records_test.py  repository_test.py  source_test.py  submitter_test.py  taginfo_test.py  (+4 more)
tests/all_test/: dna_test.py  flood_comparison_test.py  genesis5_test.py  three_generation_test.py  uranium_test.py
tests/build_test/: __init__.py  build_test.py  counter_test.py  document_tag_test.py  gather_test.py  ged_to_code_age_test.py  ged_to_code_escapes_test.py  ged_to_code_extension_record_test.py  ged_to_code_extensions_test.py  ged_to_code_filename1_test.py  ged_to_code_lang_test.py  ged_to_code_long_url_test.py  ged_to_code_maximal_test.py  ged_to_code_minimal_test.py  ged_to_code_notes_test.py  ged_to_code_obje1_test.py  ged_to_code_remarriage1_test.py  ged_to_code_remarriage2_test.py  ged_to_code_same_sex_marriage_test.py  ged_to_code_test.py  ged_to_code_voidptr_test.py  ged_to_code_xref_test.py  read_write_ged_test.py  records_test.py  split_ged_test.py
tests/classes_test/: age_test.py  all_test.py  bad_enum_test.py  bad_payload_test.py  bad_singular_test.py  change_creation_test.py  empty_subs_test.py  empty_value_test.py  famcstat_test.py  famhusb_test.py  head_gedc_gedcvers_test.py  husb_wife_test.py  map_test.py  medi_test.py  missing_required_test.py  no_subs_test.py  nodate_test.py  not_permitted_test.py  one_sub_test.py  records_test.py  slgc_famc_test.py  value_test.py
tests/compare_test/: __init__.py
tests/data/: BAD_EXT.yaml  DATE.yaml  EXTB.yaml  EXTSUBA.yaml  EXTSUBB.yaml  EXTSUBC.yaml  EXTSUBSUBA.yaml  EXTSUBSUBB.yaml  _EXT.yaml  _EXTB.yaml  _EXTREC.yaml  _EXTSUBA.yaml  _EXTSUBB.yaml  _EXTSUBC.yaml  _EXTSUBM.yaml  _EXTSUBSUBA.yaml  _EXTSUBSUBB.yaml  _EXTSUBSUBR.yaml  bad_empty_required_lang.yaml  bad_empty_required_type.yaml  bad_empty_required_uri.yaml  bad_missing_required_lang.yaml  bad_missing_required_type.yaml  bad_missing_required_uri.yaml  bad_no_tag_names.yaml  bad_not_yaml_file.yaml  bad_unrecognized_type.yaml  enum-4.yml  good_enumeration_set.yaml  good_month.yaml  good_structure.yaml
tests/expose_test/: __init__.py
tests/ged_test/: age_ged_test.py  escapes_ged_test.py  extension-record.ged  extension_record_ged_test.py  extensions-modified.ged  extensions_ged_test.py  filename-1.ged  filename1_ged_test.py  ged_read_write.py  lang_ged_test.py  longurl_ged_test.py  maximal70.ged  maximal70_ged_test.py  minimal70_gdz_test.py  minimal70_ged_test.py  note1_ged_non_cyclic_test.py  note1_ged_test.py  notes-1.ged  obje-1.ged  obje1_ged_test.py  remarriage1.ged  remarriage1_ged_test.py  remarriage2_ged_test.py  same-sex-marriage.ged  ssex_ged_test.py  void_ged_test.py  voidptr.ged  xref.ged  xref_ged_test.py
tests/generate_test/: classes_test.py  tests_test.py
tests/load_test/: classes_test.py  specifications_test.py  tests_test.py
tests/methods_test/: ged_no_trailer_test.ged  input_age_test.py  input_date_test.py  input_lati_long_test.py  input_test.py  names_test.py  queries_test.py  tagger_test.py  util_test.py  validate_test.py
tests/prep_test/: construct_test.py  convert_test.py
tests/readwrite_test/: __init__.py
tests/store_test/: __init__.py  address_test.py  age_test.py  dates_test.py  family_event_test.py  langs_test.py  map_test.py  methods_test.py  tagyaml_test.py  time_test.py
tests/structure_test/: age_test.py  alia_test.py  basicstructure_test.py  change_creation_test.py  date_time_test.py  famcadop_test.py  famcstat_test.py  famhusb_test.py  famwife_test.py  head_gedc_gedcvers_test.py  husb_wife_test.py  input_age_test.py  input_date_test.py  input_lati_long_test.py  input_name_test.py  lists_test.py  (+9 more)
(+29 files in other folders)
