[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "ChronoData"
dynamic = ["version"]
dependencies = [
]
requires-python = ">=3.12"
authors = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"},
]
maintainers = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"}
]
description = "Tools to help one construct, display and assess competing chronologies"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
keywords = ["chronology", ]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Historians",
  "Topic :: Chronology :: History",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD 3-Clause License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
]

#[project.optional-dependencies]
#gui = ["Jupyter Lab"],
#]

#https://docs.astral.sh/ruff/linter/#disabling-fixes
#[tool.ruff.lint] 
#fixable = ["ALL"]
#unfixable = ["F401"]

[project.urls]
Homepage = "https://github.com/FrankHubeny/ChronoData"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/FrankHubeny/ChronoData"
"Bug Tracker" = "https://github.com/FrankHubeny/ChronoData/issues"
Changelog = "https://github.com/FrankHubeny/ChronoData/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra", 
    "--showlocals", 
    "--strict-markers", 
    "--strict-config", 
    "--cov=chronodata",
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 80
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
#indent-style = "tab"
docstring-code-format = true
# Like Black, use double quotes for strings.
# quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
#indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
#line-ending = "auto"

