[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "ChronoData"
dynamic = ["version"]
requires-python = ">=3.13"
authors = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"},
]
maintainers = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"}
]
description = "Tools to help one construct, display and assess competing chronologies"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
keywords = [
  "chronology",
  "history",
  "science",
  "religion",
  "archaeology",
  "genealogy",
  "israel",
  "egypt",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Religion",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Education",
  "Topic :: File Formats :: JSON",
  "Topic :: Sociology :: Genealogy",
  "Topic :: Sociology :: History",
  "Typing :: Typed",
]
dependencies = [
  #"astropy>=6.1.6",
  "json>=2.0.9",
  "matplotlib>=3.8.4",
  "numpy>=2.0.2",
  "pandas>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/FrankHubeny/ChronoData"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/FrankHubeny/ChronoData"
"Bug Tracker" = "https://github.com/FrankHubeny/ChronoData/issues"
Changelog = "https://github.com/FrankHubeny/ChronoData/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra", 
  "--showlocals", 
  "--strict-markers", 
  "--strict-config",
  "--import-mode=importlib",	
  "--cov=chronodata",
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.mypy]
mypy_path = [
    "ChronoData", 
#    "tests",
]
files = [
  "chronodata/chrono.py", 
  "chronodata/constants.py", 
  "chronodata/core.py",
  "chronodata/g7.py",
  "chronodata/compare.py",
]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 80
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "TID251",      # flake8-tidy-imports.banned-api
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
  "ISC001",  # May collide with formatter
  "PT004",   # Incorrect check, usefixtures is the correct way to do this
  "PLR09",   # Too many X
  "PLR2004", # Magic value in comparison
]

[tool.ruff.format]
quote-style = "single"  # quote-style = "double"  # Like Black, use double quotes for strings.
docstring-code-format = true
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.  #indent-style = "tab"
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.

#[tool.repo-review]
#ignore = [
#    "MY",    # ignore MyPy setting checks
#    "PC111", # ignore using `blacken-docs` in pre-commit
#    "PC140", # ignore using `mypy` in pre-commit
#    "PC180", # ignore using `prettier` in pre-commit
#    "PC901", # ignore using custom update message (we have many of the default ones in our history already)
#    "PP308", # ignore requiring `-ra` flag for pytest, astropy's test suite is too large for this to be useful
#]